slick bug on mobile

--- a/static/css/trending-post.css
+++ b/static/css/trending-post.css
@@ -32,6 +32,7 @@
   overflow: hidden;
   margin: 0 auto;
   width: 95%;
+  display: block !important;
 }
 
 .slick-prev-btn {
